# unforked-marvin-cxx

./: .gitignore  CMakeLists.txt  Dockerfile  OWNERS  README.md  build.sh  ccbuilder.go  cloudbuild_depl.yaml  cloudbuild_depl_dev.yaml  cmd.go  errors.go  go.mod  go.sum  init.go  init_test.go
cobrarust/: Cargo.toml
cobrarust/src/: fmtlogger.rs  main.rs  message_mapping.rs  result.rs  txt_parser.rs
cobrarust/test_files/: test_copy.cpp
is_cpp/: .gitignore  build.sh  is_cpp.cpp
issues/: CXX-C1001.toml  CXX-S1001.toml  CXX-S1002.toml  CXX-S1003.toml  CXX-S1004.toml  CXX-S1005.toml  CXX-S1006.toml  CXX-S1008.toml  CXX-S1009.toml  CXX-S1011.toml  CXX-S1012.toml  CXX-S1013.toml  CXX-S1014.toml  CXX-S1015.toml  CXX-S1016.toml  CXX-S1017.toml  CXX-W1022.toml  CXX-W1023.toml  CXX-W1066.toml  CXX-W1159.toml  CXX-W1161.toml  CXX-W1162.toml  CXX-W1164.toml  CXX-W1170.toml  CXX-W1171.toml  CXX-W1177.toml  CXX-W1188.toml  CXX-W1197.toml  CXX-W1200.toml  CXX-W1207.toml  CXX-W1230.toml  CXX-W1231.toml  CXX-W1232.toml  CXX-W1233.toml  CXX-W1240.toml  CXX-W1241.toml  CXX-W1243.toml  CXX-W1247.toml  CXX-W1264.toml  CXX-W2000.toml  (+8 more)
src/: CMakeLists.txt
src/checks/: AssignmentInIfConditionCheck.cpp  AssignmentInIfConditionCheck.h  AvoidNSErrorInitCheck.cpp  AvoidNSErrorInitCheck.h  BoolPointerImplicitConversionCheck.cpp  BoolPointerImplicitConversionCheck.h  CMakeLists.txt  CopyConstructorInitCheck.cpp  CopyConstructorInitCheck.h  DanglingHandleCheck.cpp  DanglingHandleCheck.h  FoldInitTypeCheck.cpp  FoldInitTypeCheck.h  InaccurateEraseCheck.cpp  InaccurateEraseCheck.h  InfiniteLoopCheck.cpp  InfiniteLoopCheck.h  IntegerDivisionCheck.cpp  IntegerDivisionCheck.h  ParentVirtualCallCheck.cpp  ParentVirtualCallCheck.h  UseNullptrCheck.cpp  UseNullptrCheck.h
src/engine/: AnalyserContext.cpp  AnalyserContext.h  CMakeLists.txt  CheckFactory.cpp  CheckFactory.h  CheckInterface.cpp  CheckInterface.h  ClangTool.cpp  ClangTool.h  Driver.cpp  Driver.h  Issue.hpp  main.cpp
src/utils/: CMakeLists.txt
test/: CMakeLists.txt  TestAnalyserContext.cpp  TestIssue.cpp
test/checks/: assignment-in-if-condition.cpp
